--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "^7.6.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
@@ -18,6 +19,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
