--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
     "expo": "^49.0.13",
+    "expo-file-system": "~15.4.4",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
